--- a/service.yaml
+++ b/service.yaml
@@ -4,13 +4,13 @@ apiVersion: v1
 kind: Service
 metadata:
   # Nama dari Service
-  name: news-website-service
+  name: final-project-service
 spec:
   # Tipe Service. ClusterIP hanya bisa diakses dari dalam cluster.
   type: ClusterIP
   # Selector ini akan mencari Pod dengan label 'app: news-website' untuk diarahkan traffic.
   selector:
-    app: news-website
+    app: final-project
   ports:
   - protocol: TCP
     # Port pada Service itu sendiri
